<resources>
    <string name="app_name">Intree</string>
    <string name="title_activity_auth">Authentication</string>
    <string name="title_activity_intro">Intree</string>
    <string name="title_activity_main">Main</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="login">Login</string>
    <string name="logo">Logo</string>
    <string name="terms_short_discl_1">By continuing, you agree to our</string>
    <string name="terms_of_service_title">Terms of service</string>
    <string name="terms_short_discl_2">and</string>
    <string name="privacy_policy_title">Privacy policy</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_phone_number_into_discl">Intree uses your phone number to protect your account with two factor authentication, nothing else.</string>
    <string name="continue_short">Continue</string>
    <string name="welcome_back">Welcome back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="we_send_you_a_code_title">We send you a code</string>
    <string name="on_phone_number">On phone number</string>
    <string name="your_code_will_arrive_shortly">Your code will arrive shortly</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="enter_validation_code_hint">Enter your code</string>
    <string name="wrong_code_please_try_again">Wrong code, please try again.</string>
    <string name="awesome">Awesome!</string>
    <string name="your_profile_is_verified">Your profile is verified</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="step_1_short">Step 1</string>
    <string name="step_two_short">Step Two</string>
    <string name="title_activities">Activity</string>
    <string name="done">Done</string>
    <string name="aspects_title">Aspects</string>
    <string name="aspects_hint">Create new aspect or tap on existing to make changes</string>
    <string name="create_your_first_aspect">Create your first aspect</string>
    <string name="edit">Edit</string>
    <string name="title_profile">Profile</string>
    <string name="create_a_aspect">Create a aspect</string>
    <string name="aspect_title">Aspect</string>
    <string name="title_for_aspect">Title</string>
    <string name="title_info">Info</string>
    <string name="Phone">Phone</string>
    <string name="email">Email</string>
    <string name="link">Link</string>
    <string name="about">About</string>
    <string name="describe_your_aspect">Describe your aspect</string>
    <string name="tags_title">Tags</string>
    <string name="create_aspect_tags_descr">Your tags are used when people search within your network. Only people you have added to the aspect will be able to discover it.</string>
    <string name="cover">Cover</string>
    <string name="make_your_aspect_visual_with_photos">Make your aspect visual with photos.</string>
    <string name="add_photos">Add photos</string>
    <string name="edit_delete">Edit/Delete</string>
    <string name="network">Network</string>
    <string name="inbox">Inbox</string>
    <string name="introduce">Introduce</string>
    <string name="profile">Profile</string>
    <string name="create_your_next_aspect">Create your next aspect</string>
    <string name="aspect_gallery">Aspect Gallery</string>
    <string name="delete_selected">Delete selected</string>
    <string name="photos">Photos</string>
        <string name="web_aspect_is_not_active">Your web aspect is not active</string>
    <string name="edit_aspect_title">Edit a aspect</string>
    <string name="hold_and_drag_to_change_the_order">Hold and drag to change the order</string>
    <string name="invite_plus">Invite +</string>
    <string name="invite">Invite</string>
    <string name="go_back">Go back</string>
    <string name="back">Back</string>
    <string name="search_from">Search from your phonebook</string>
    <string name="search_contacts">Search contacts</string>
    <string name="choose_your">Choose your</string>
    <string name="the_aspects">The aspects you choose will be\nvisible for the people you invite</string>
    <string name="share">Share</string>
    <string name="send_a_text_message_with_an_invite_link">Send a text message with an invite link</string>
    <string name="generates_a_shareable_link_based_on_your_choosen_aspects">Generates a shareable link based on your choosen Aspects.</string>
    <string name="invite_link">Invite Link</string>
    <string name="direct">Direct</string>
    <string name="you_did_not_have_contacts">\"You did not have contacts in phone\"</string>
    <string name="introductions">Introductions</string>
    <string name="history">History</string>
    <string name="tap_to_select">Tap to Select</string>
    <string name="new_group">New Group</string>
    <string name="by_invite">By invite</string>
    <string name="explore">Explore</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="mange_your_appearance">Manage your appearance</string>
    <string name="benefits">Benefits</string>
    <string name="only_visible_to_you">Only visible to you</string>
    <string name="title">Title</string>
    <string name="create">Create</string>
    <string name="aspects">Aspects</string>
    <string name="add_new"><![CDATA[Add new >]]></string>
    <string name="from">From:</string>
    <string name="added_to_preferred_posts">Added to preferred posts</string>
    <string name="do_not_show_this_again">do not show this again</string>
    <string name="posts_will_now_be_displayed_at_the_top">posts will now be displayed at the top</string>
    <string name="favourites">Favourites</string>
    <string name="report">Report</string>
    <string name="mute_all_posts_from_generic_name">Mute all posts from “Generic name”</string>
    <string name="subscribe_to_updates">Subscribe to updates</string>
    <string name="mute_posts_from_aspect">Mute posts from “Aspect”</string>
    <string name="new_post">New Post</string>
    <string name="add_media">Add media</string>
    <string name="write_a_caption">Write a caption...</string>
    <string name="group_has_been_created">Group has been created</string>
    <string name="group_info">Group Info</string>
    <string name="create_a_group_title">Create a group title</string>
    <string name="save">Save</string>
    <string name="based_on_an_aspect">Based on an aspect</string>
    <string name="create_group">Create Group</string>
    <string name="settings">Settings</string>
    <string name="login_with_biometrics">Login with Biometrics</string>
    <string name="use_pincode">Use Pincode</string>
    <string name="aspect">Aspect</string>
    <string name="treets">Treets</string>
    <string name="treet">Treet</string>
    <string name="choose_aspects">Choose Aspects</string>
    <string name="step2">Step 2</string>
    <string name="how_do_you_want_to_share">How do you want to share?</string>
    <string name="qr_code">QR-code</string>
    <string name="direct_message">Direct message</string>
    <string name="contacts">Contacts</string>
    <string name="share_link">Share link</string>
    <string name="a_link_everyone_ASO">A link everyone can use to send a request\nto connect (Expires after 7 days)</string>
    <string name="scan_with_a_camera_to_connect">Scan with a camera\nto connect</string>


</resources>