<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgrounds"
    tools:context=".presentation.auth.AuthActivity">

    <TextView
        android:id="@+id/tvPhoneNumberTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_phone_number"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/text_bold_gray"
        android:layout_marginTop="170dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPhoneNumberDiscl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_phone_number_into_discl"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/text_bold_gray"
        android:textSize="15sp"
        android:layout_marginTop="22dp"
        android:paddingEnd="40dp"
        android:paddingStart="40dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPhoneNumberTitle" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/btnSignUp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_text_phone_frame"
        android:ems="10"
        android:hint="Phone number"
        android:inputType="phone"
        android:fontFamily="@font/montserrat"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:elevation="12dp"
        android:textColor="@color/text"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/tvPhoneNumberDiscl"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/btn_primary_rounded_rippled"
        android:text="@string/continue_short"
        android:fontFamily="@font/montserrat_bold"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:elevation="8dp"
        android:textColor="@color/text"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>