<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgrounds"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.auth.set_up.SetUpUserActivityFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgrounds"
        android:id="@+id/phoneValidationAppBar"
        android:elevation="8dp"
        android:theme="@style/Theme.Unify.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/backgrounds"
            app:popupTheme="@style/Theme.Unify.PopupOverlay"
            app:navigationIcon="?attr/homeAsUpIndicator"
            android:theme="@style/Theme.Unify">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_activities"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/text"
                android:textSize="20sp"/>

        </androidx.appcompat.widget.Toolbar>
        <!--    app:navigationIcon="?attr/homeAsUpIndicator"-->

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgrounds"
        tools:context=".presentation.auth.AuthActivity">

        <ImageView
            android:id="@+id/cardSetUpStepOne"
            android:layout_width="334dp"
            android:layout_height="167dp"
            android:layout_marginTop="85dp"
            android:background="@drawable/set_up_step_1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="true"
            android:focusable="true"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/step_1_short" />

        <ImageView
            android:id="@+id/cardSetUpStepTwo"
            android:layout_width="334dp"
            android:layout_height="167dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="1dp"
            android:background="@drawable/set_up_step_2"
            app:layout_constraintTop_toBottomOf="@id/cardSetUpStepOne"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="true"
            android:focusable="true"
            android:adjustViewBounds="true"
            android:layout_centerInParent="true"
            android:contentDescription="@string/step_two_short" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>