<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/imgRoundedProfilePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:clickable="true"
            android:elevation="0dp"
            android:focusable="true"
            android:src="@drawable/ic_no_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_border_width="0dp"
            app:riv_mutate_background="false"
            app:riv_oval="true" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:elevation="1dp"
            android:src="@drawable/ic_vector_prefered_posts"
            app:layout_constraintBottom_toBottomOf="@+id/imgRoundedProfilePhoto"
            app:layout_constraintEnd_toEndOf="@+id/imgRoundedProfilePhoto" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/added_to_preferred_posts"
            android:textColor="@color/black_text"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgRoundedProfilePhoto" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/black_text"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/tv1"
            app:layout_constraintStart_toStartOf="@+id/tv1"
            app:layout_constraintTop_toBottomOf="@+id/tv1"
            tools:text="Michael’s posts will now be displayed at the top " />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/do_not_show_this_again"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv2"
            app:layout_constraintTop_toBottomOf="@+id/btnContinue" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContinue"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_purple_rounded"
            android:text="@string/continue_short"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.085"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv2"
            app:layout_constraintWidth_percent="0.4" />

        <CheckBox
            android:id="@+id/cbDoNotShow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_checkbox"
            android:scaleX="1.2"
            android:scaleY="1.2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv4"
            app:layout_constraintTop_toBottomOf="@+id/btnContinue" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
